doma/mariadb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doma-mariadb
spec:
  selector:
    matchLabels:
      app: doma-mariadb
  replicas: 1
  template:
    metadata:
      labels:
        app: doma-mariadb
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: doma-mariadb-pvc
      containers:
      - name: mariadb
        imagePullPolicy: Always
        image: nwik/doma-mariadb:10.1
        volumeMounts:
          - name: data
            mountPath: /var/lib/mysql
        ports:
        - name: db
          containerPort: 3126
