doma/nginx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doma-nginx
spec:
  selector:
    matchLabels:
      app: doma-nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: doma-nginx
    spec:
      containers:
      - name: php
        imagePullPolicy: Always
        image: nwik/doma-php:3.0.6
        volumeMounts:
        - name: phpconfig
          mountPath: /config
        - name: doma-pvc
          mountPath: /code/map_images
      - name: nginx
        imagePullPolicy: Always
        image: nwik/doma-nginx:3.0.6
        ports:
        - name: web
          containerPort: 80
        volumeMounts:
        - name: doma-pvc
          mountPath: /code/map_images
      volumes:
      - name: doma-pvc
        persistentVolumeClaim:
          claimName: doma-web-pvc
      - name: phpconfig
        configMap:
          name: doma-php
