doma/php.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doma-php
spec:
  selector:
    matchLabels:
      app: doma-php
  replicas: 1
  template:
    metadata:
      labels:
        app: doma-php
    spec:
      containers:
      - name: php
        imagePullPolicy: Always
        image: nwik/doma-php:3.0.6
        ports:
        - name: db
          containerPort: 3126
