doma/mariadb-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: default
spec:
  ports:
  - name: http
    port: 3306
    protocol: TCP
    targetPort: 3306
  selector:
    app: doma-mariadb
  type: ClusterIP
