doma/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: doma
  namespace: default
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: doma-nginx
  type: ClusterIP
