doma/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    certmanager.k8s.io/issuer: letsencrypt-prod
    ingress.kubernetes.io/proxy-body-size: 30m
  name: doma
spec:
  rules:
  - host: maps.niklasw.iki.fi
    http:
      paths:
      - path: /
        backend:
         serviceName: doma
         servicePort: 80
  tls:
    - hosts:
      - maps.niklasw.iki.fi
      secretName: maps-niklasw-iki-fi-tls
